--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@nestjs/common": "^7.1.3",
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.4.1",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.0",
     "apollo-server-express": "^2.14.4",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "dataloader": "^2.0.0",
